--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@ layout: layout.hbs
                 <p>Call Node.js modules directly from the DOM and Web Workers</p>
             </li>
             <li>
-                <img src="/img/icon_instances.png" alt=""/>
+                <img href="http://docs.nwjs.io/en/latest/For%20Users/Advanced/Protect%20JavaScript%20Source%20Code/" src="/img/icon_instances.png" alt=""/>
 
                 <p><a href="http://docs.nwjs.io/en/latest/For%20Users/Advanced/Protect%20JavaScript%20Source%20Code/">JavaScript Source Protection</a></p>
             </li>
